# HElib

./: .clang-format  .cproject  .dockerignore  .gitignore  .nojekyll  .project  .travis.yml  CHANGES.md  CKKS-security.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER_USAGE.md  Dockerfile  Doxyfile  INSTALL.md  INSTALL.txt  ISSUES.md  LICENSE.md  NEW_INSTALL.md  NOTICE  OLD_INSTALL.txt  README.md  TESTS.md  _alt_c_r_t_8h.html  _alt_c_r_t_8h_source.html  _arg_map_8h_source.html  _c_modulus_8h.html  _c_modulus_8h_source.html  _context_8h_source.html  _ct_ptrs_8h_source.html  _ctxt_8h.html  _ctxt_8h_source.html  _double_c_r_t_8h.html  _double_c_r_t_8h_source.html  _encrypted_array_8h.html  _encrypted_array_8h_source.html  _eval_map_8h.html  _eval_map_8h_source.html  _f_h_e_8h.html  (+445 more)
benchmarks/: CMakeLists.txt  IO.cpp  README.md  bench_common.h  bench_fatboot.cpp  bench_thinboot.cpp  bgv_basic.cpp  bgv_common.h  bgv_fatboot.cpp  bgv_thinboot.cpp  ckks_basic.cpp  ckks_common.h  fft_bench.cpp
ci/: build_install_lib.sh  build_test_consumer.sh  install_deps.sh  test_lib.sh  travis.sh
cmake/: FindGMP.cmake  FindNTL.cmake  get_gmp_version.c  get_ntl_version.c  gtest.cmake  helibConfig.cmake.in  intel-hexl.cmake  rpath_fixer.cmake
dependencies/: CMakeLists.txt
dependencies/gmp/: CMakeLists.txt
dependencies/ntl/: CMakeLists.txt
doc/: Readme.md  mainpage.dox  notes.tex
docs/: _arg_map_8h_source.html  _ctxt_8h_source.html  _matrix_8h_source.html  _ptr_matrix_8h_source.html  _ptxt_8h_source.html  _reader_8h_source.html  _sum_register_8h_source.html  assertions_8h_source.html  class_reader-members.html  classhelib_1_1_add_d_a_g-members.html  classhelib_1_1_add_d_a_g.html  classhelib_1_1_arg_map-members.html  classhelib_1_1_basic_automorph_precon-members.html  classhelib_1_1_bipartitle_graph-members.html  classhelib_1_1_block_mat_mul1_d.html  classhelib_1_1_block_mat_mul1_d__partial-members.html  classhelib_1_1_block_mat_mul1_d__partial.html  classhelib_1_1_block_mat_mul1_d_exec-members.html  classhelib_1_1_block_mat_mul_full__derived-members.html  classhelib_1_1_block_mat_mul_full_exec-members.html  classhelib_1_1_ctxt.html  (+170 more)
example_program/: CMakeLists.txt  helib_example.cpp  main.cpp
examples/BGV_binary_arithmetic/: BGV_binary_arithmetic.cpp  CMakeLists.txt  Dockerfile  README.md
examples/BGV_general_example/: BGV_general_example.cpp  CMakeLists.txt
examples/binaryArith_example/: CMakeLists.txt  binaryArith_example.cpp
examples/tutorial/: 01_ckks_basics.cpp  02_ckks_depth.cpp  03_ckks_data_movement.cpp  04_ckks_matmul.cpp  05_ckks_multlowlvl.cpp  06_ckks_complex.cpp  06_ckks_serialization.cpp  07_ckks_deserialization.cpp  07_ckks_serialization.cpp  08_ckks_deserialization.cpp  CMakeLists.txt  new-api.cpp
misc/aes/: CMakeLists.txt  Test_AES.cpp  homAES.cpp  homAES.h  simpleAES.cpp
misc/psi/lookup/: CMakeLists.txt  lookup.cpp
misc/psi/tests/: CMakeLists.txt  TestIO.cpp  gen-expected-mask.py  gen-params.batx  increase-slots.py  lookup.bats  main.cpp  report.sh  scoring.bats
src/: AltCRT.cpp  AltCRT.h  AltEvalMap.cpp  AltEvalMap.h  ArgMap.cpp  ArgMap.h  BenesNetwork.cpp  CMakeLists.txt  CModulus.cpp  CModulus.h  CachedConstants.h  Context.cpp  CtPtrs.h  Ctxt.cpp  Ctxt.h  DoubleCRT.cpp  DoubleCRT.h  EaCx.cpp  EncryptedArray.cpp  EncryptedArray.h  EvalMap.cpp  EvalMap.h  FFT.cpp  FFT.h  FHE.cpp  FHE.h  FHEContext.cpp  FHEContext.h  FHEcontext.h  IndexMap.h  IndexSet.cpp  IndexSet.h  JsonWrapper.cpp  KeySwitching.cpp  LICENSE.TXT  MagicPoly.cpp  Makefile  Makefile.real  MulTime.cpp  NumbTh.cpp  (+173 more)
src/aes/: CMakeLists.txt  Makefile  Test_AES.cpp  homAES.cpp  homAES.h  simpleAES.cpp
src/misc/: FHE.h  PIR.cpp  SPX.h  Test_SPX.cpp  Test_embedding.cpp  Test_eqtesting.cpp  Test_matmul.cpp  Test_multiAut.cpp  blockMatmul.cpp  iotest_asciiLE.txt  matmul.cpp  matmul.h  multiAutomorph.h  params.cpp  params1.cpp  params1a.cpp  rotations.cpp
src/ntl-updates/: ZZ.c  ZZ.h  ctools.h
src/tests/: CMakeLists.txt  GTestApproxNums.cpp  GTestBinIO.cpp  GTestBinaryArith.cpp  GTestBinaryCompare.cpp  GTestBootstrapping.cpp  GTestEaCx.cpp  GTestEvalMap.cpp  GTestExtractDigits.cpp  GTestFatboot.cpp  GTestGeneral.cpp  GTestIO.cpp  GTestIntraSlot.cpp  GTestMatmul.cpp  GTestPAlgebra.cpp  GTestPGFFT.cpp  GTestPermutations.cpp  GTestPolyEval.cpp  GTestPowerful.cpp  GTestPtrVector.cpp  GTestReplicate.cpp  GTestTableLookup.cpp  GTestThinBootstrapping.cpp  GTestThinEvalMap.cpp  GTestThinboot.cpp  GTest_Bin_IO.cpp  GTest_EaCx.cpp  GTest_EvalMap.cpp  GTest_General.cpp  GTest_IO.cpp  GTest_PAlgebra.cpp  GTest_PGFFT.cpp  GTest_Permutations.cpp  GTest_PolyEval.cpp  GTest_Powerful.cpp  GTest_PtrVector.cpp  GTest_Replicate.cpp  GTest_ThinBootstrapping.cpp  GTest_ThinEvalMap.cpp  GTest_approxNums.cpp  (+24 more)
src/tests/test_resources/: iotest_asciiBE.txt
src/vc2010/fhe/: fhe.vcxproj  fhe.vcxproj.filters
src/vc2010/fhe/Debug/: ResolveAssemblyReference.cache
src/vc2010/helib/: helib.sln  helib.vcxproj  helib.vcxproj.filters
tests/: CMakeLists.txt  GTestApproxNums.cpp  GTestBinIO.cpp  GTestBinaryArith.cpp  GTestBinaryCompare.cpp  GTestBootstrapping.cpp  GTestEaCx.cpp  GTestEvalMap.cpp  GTestExtractDigits.cpp  GTestFatboot.cpp  GTestGeneral.cpp  GTestIO.cpp  GTestIntraSlot.cpp  GTestMatmul.cpp  GTestPAlgebra.cpp  GTestPGFFT.cpp  GTestPermutations.cpp  GTestPolyEval.cpp  GTestPowerful.cpp  GTestPtrVector.cpp  GTestReplicate.cpp  GTestTableLookup.cpp  GTestThinBootstrapping.cpp  GTestThinEvalMap.cpp  GTestThinboot.cpp  TestArgMap.cpp  TestBGV.cpp  TestBinIO.cpp  TestBootstrappingWithMultiplications.cpp  TestCKKS.cpp  TestClonedPtr.cpp  TestContext.cpp  TestCtxt.cpp  TestErrorHandling.cpp  TestHEXL.cpp  TestIO.cpp  TestLogging.cpp  TestMatmulCKKS.cpp  TestMatrix.cpp  TestPartialMatch.cpp  (+10 more)
tests/test_resources/: iotest_asciiLE.txt
utils/crypto/: CMakeLists.txt  decrypt.cpp  encrypt.cpp
utils/key-gen/: CMakeLists.txt  README.md  gen-data.cpp  key-gen.cpp  large_params.txt  medium_params.txt  small_params.txt
utils/test_bootstrapping/: CMakeLists.txt  test_bootstrap.cpp  test_bootstrap_keygen.cpp
(+1279 files in other folders)
